feat: add styles, html, API code

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- Poppins -->
+    <!-- Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Weather app API</title>
@@ -26,17 +27,38 @@
             </div>
             <div class="search-box">
                 <input id="input" type="search" placeholder="San Francisco">
-                <button id="search-btn"><span>Search</span><i class="fas fa-search"></i></button>
+                <button id="search-btn"><i class="fas fa-search"></i><span>Search</span></button>
             </div>
         </div>
     </header>
     <div class="wrapper">
         <div class="container">
-            <div class="main">
+            <div class="weather">
+                <div class="main">
+                    <p class="temp">31</p>
+                    <p class="splash">|</p>
+                    <p class="city">San-diego</p>
+                </div>
 
+                <div class="details">
+                    <div class="col">
+                        <p class="humidity">50 %</p>
+                        <p>Влажность</p>
+                    </div>
+                    <div class="col">
+                        <p class="wind">1 км/ч</p>
+                        <p>Скорость ветра</p>
+                    </div>
+                    <div class="col">
+                        <p class="pressure">760 мм рт. ст.</p>
+                        <p>Атм. давление</p>
+                    </div>
+                </div>
             </div>
+
         </div>
     </div>
+
     <script src="https://kit.fontawesome.com/41a8dd7285.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
