feat: add rule for input (only for eng, rus letters and space)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2>Weather <span>App API</span></h2>
             </div>
             <div class="search-box">
-                <input id="input" type="search" placeholder="San Francisco">
+                <input id="input" type="text" placeholder="San Francisco" required>
                 <button id="search-btn"><i class="fas fa-search"></i><span>Search</span></button>
             </div>
         </div>
