--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
             <div class="search-box">
                 <input id="input" type="text" placeholder="San Francisco" required>
                 <button id="search-btn"><i class="fas fa-search"></i><span>Search</span></button>
+                <div class="atention">Проверьте название города!</div>
             </div>
         </div>
     </header>
     <div class="wrapper">
         <div class="container">
             <div class="weather">
+
                 <div class="main">
                     <p class="temp">31</p>
                     <p class="splash">|</p>
